[project]
name = "pytrackmate"
description = "Import Trackmate XML files in Python as Pandas dataframe."
authors = [{ name = "Hadrien Mary", email = "hadrien.mary@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
dependencies = ["numpy", "pandas"]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/hadim/pytrackmate"

# Build system - setuptools

[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src/"]
include = ["pytrackmate*"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]

# Pixi configuration

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

# Pixi dependencies and features

[tool.pixi.dependencies]
python = ">=3.10"
numpy = "*"
pandas = "*"

[tool.pixi.pypi-dependencies]
pytrackmate = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pip = "*"
setuptools = ">=75"
setuptools-scm = ">=8"
ruff = "*"
jupyterlab = "*"
matplotlib = "*"
semver = "*"
python-build = "*"
pytest = "*"

[tool.pixi.feature.dev.tasks]
test = 'python -m pytest tests/ -vvv'
lint = "ruff check -v"
format = "ruff format -v"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
dev = ["dev", "py310"]
test-py310 = ["dev", "py310"]
test-py311 = ["dev", "py311"]
test-py312 = ["dev", "py312"]
test-py313 = ["dev", "py313"]
